// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width slice 1`] = `<TileA />`;

exports[`2. lead one and one slice 1`] = `
<View>
  <TileA />
  <TileB />
</View>
`;

exports[`3. lead one and four slice 1`] = `
<View>
  <TileI />
  <TileJ />
  <View />
  <TileJ />
  <View />
  <TileJ />
  <View />
  <TileJ />
</View>
`;

exports[`4. lead two no pic and two 1`] = `
<View>
  <TileF />
  <View />
  <TileB />
  <View />
  <TileD />
  <View />
  <TileE />
</View>
`;

exports[`5. secondary one slice 1`] = `
<View>
  <TileA />
</View>
`;

exports[`6. secondary four slice 1`] = `
<View>
  <View>
    <View>
      <TileC />
    </View>
    <View />
    <View>
      <TileC />
    </View>
  </View>
  <View />
  <View>
    <View>
      <TileC />
    </View>
    <View />
    <View>
      <TileC />
    </View>
  </View>
</View>
`;

exports[`7. secondary one and four slice 1`] = `
<View>
  <View>
    <TheTimesLogo
      height={40}
      width={40}
    />
  </View>
  <View />
  <View>
    <View>
      <View>
        <TileN />
      </View>
    </View>
    <View />
    <View>
      <TileO />
    </View>
    <View />
    <View>
      <TileO />
    </View>
    <View />
    <View>
      <TileO />
    </View>
    <View />
    <View>
      <TileO />
    </View>
  </View>
</View>
`;

exports[`8. secondary two and two slice 1`] = `
<View>
  <View>
    <View>
      <TileC />
    </View>
    <View />
    <View>
      <TileC />
    </View>
  </View>
  <View />
  <View>
    <TileG />
  </View>
  <View />
  <View>
    <TileG />
  </View>
</View>
`;

exports[`9. secondary two no pic and two slice 1`] = `
<View>
  <TileB />
  <View />
  <TileB />
  <View />
  <TileG />
  <View />
  <TileG />
</View>
`;

exports[`10. list two and six no pic slice 1`] = `
<View>
  <View>
    <View>
      <TileC />
    </View>
    <View />
    <View>
      <TileC />
    </View>
  </View>
  <View />
  <View>
    <TileL />
    <View />
  </View>
  <View>
    <TileL />
    <View />
  </View>
  <View>
    <TileL />
    <View />
  </View>
  <View>
    <TileL />
    <View />
  </View>
  <View>
    <TileL />
    <View />
  </View>
  <View>
    <TileL />
  </View>
</View>
`;

exports[`11. leaders slice 1`] = `
<View>
  <View>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/edition-slices/assets/leaders-masthead.png",
        }
      }
    />
    <View>
      <Text>
         Leading Articles 
      </Text>
    </View>
  </View>
  <View>
    <TileM />
    <View />
    <TileM />
    <View />
    <TileM />
  </View>
</View>
`;

exports[`12. comment lead and cartoon slice 1`] = `
<View>
  <TileP />
  <View />
  <TileQ />
</View>
`;
